--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Mathieu Baudier <mbaudier@argeo.org>
 Build-Depends: debhelper-compat (= 13), pkg-config, cmake-data, cmake, cpio, file, git,
 	libsdl2-dev, 
 	libswresample-dev, libavcodec-dev, libavformat-dev, libavdevice-dev, libavutil-dev, libavfilter-dev,
-	ggml-dev, libllama-dev
+	ggml-dev, libggml-cpu, libllama-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/ggerganov/whisper.cpp
 Rules-Requires-Root: binary-targets
@@ -16,7 +16,7 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends},
- libggml
+ libggml, libggml-cpu
 Description: Inference of Whisper in pure C/C++ (shared library)
  Whisper.cpp inference of Whisper in pure C/C++ (shared library).
 
@@ -29,14 +29,24 @@ Depends: ${misc:Depends},
 Description: Inference of Whisper in pure C/C++ (development files)
  Whisper.cpp inference of Whisper in pure C/C++ (development files).
 
-#Package: whisper-cpp-cli
-#Architecture: any
-#Priority: optional
-#Depends: ${shlibs:Depends},
-# libwhisper,
-# libswresample4, libavcodec59, libavformat59, 
-#Description: Inference of Whisper in pure C/C++ (CLI)
-# Whisper.cpp inference of Whisper in pure C/C++ (CLI).
+Package: whisper-cpp-cli
+Architecture: any
+Priority: optional
+Depends: ${shlibs:Depends},
+ libwhisper,
+ libswresample4, libavcodec59, libavformat59
+Description: Inference of Whisper in pure C/C++ (CLI)
+ Whisper.cpp inference of Whisper in pure C/C++ (CLI).
+
+Package: whisper-cpp-stream
+Architecture: any
+Priority: optional
+Depends: ${shlibs:Depends},
+ libwhisper,
+ libswresample4, libavcodec59, libavformat59,
+ libsdl2-2.0-0
+Description: Inference of Whisper in pure C/C++ (stream)
+ Whisper.cpp inference of Whisper in pure C/C++ (stream).
 
 #Package: whisper-cpp-talk-llama
 #Architecture: any
