--- a/debian/control
+++ b/debian/control
@@ -48,15 +48,16 @@ Depends: ${shlibs:Depends},
 Description: Inference of Whisper in pure C/C++ (stream)
  Whisper.cpp inference of Whisper in pure C/C++ (stream).
 
-#Package: whisper-cpp-talk-llama
-#Architecture: any
-#Priority: optional
-#Depends: ${shlibs:Depends},
-# libwhisper, libllama,
-# espeak-ng,
-# libsdl2-2.0-0, libswresample4, libavcodec59, libavformat59, 
-#Description: Inference of Whisper in pure C/C++ (talk-llama)
-# Whisper.cpp inference of Whisper in pure C/C++ (talk-llama).
+Package: whisper-cpp-talk-llama
+Architecture: any
+Priority: optional
+Depends: ${shlibs:Depends},
+ libwhisper, libllama,
+ espeak-ng,
+ libswresample4, libavcodec59, libavformat59,
+ libsdl2-2.0-0
+Description: Inference of Whisper in pure C/C++ (talk-llama)
+ Whisper.cpp inference of Whisper in pure C/C++ (talk-llama).
 
 Package: whisper-cpp-dev
 Architecture: any
