Disable ffmpeg support in Debian package until licensing is clarified

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,6 @@ Priority: optional
 Maintainer: Mathieu Baudier <mbaudier@argeo.org>
 Build-Depends: debhelper-compat (= 13), pkg-config, cmake-data, cmake, cpio, file, git,
 	libsdl2-dev, 
-	libswresample-dev, libavcodec-dev, libavformat-dev, libavdevice-dev, libavutil-dev, libavfilter-dev,
 	ggml-dev, libggml-cpu, libllama-dev
 Standards-Version: 4.5.1
 Homepage: https://github.com/ggerganov/whisper.cpp
@@ -24,8 +23,7 @@ Package: whisper-cpp-cli
 Architecture: any
 Priority: optional
 Depends: ${misc:Depends}, ${shlibs:Depends},
- libwhisper1,
- libswresample4, libavcodec59, libavformat59
+ libwhisper1
 Description: Inference of Whisper in pure C/C++ (CLI)
  Whisper.cpp inference of Whisper in pure C/C++ (CLI).
 
@@ -34,7 +32,6 @@ Architecture: any
 Priority: optional
 Depends: ${misc:Depends}, ${shlibs:Depends},
  libwhisper1,
- libswresample4, libavcodec59, libavformat59,
  libsdl2-2.0-0
 Description: Inference of Whisper in pure C/C++ (stream)
  Whisper.cpp inference of Whisper in pure C/C++ (stream).
